img/kubernetis_main/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-crud-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-crud-api
  template:
    metadata:
      labels:
        app: my-crud-api
    spec:
      containers:
      - name: my-crud-api
        image: adithyan17/college2:v1
        ports:
        - containerPort: 8000
