img/kubernetis_main/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-postgres
  template:
    metadata:
      labels:
        app: my-postgres
    spec:
      containers:
      - name: my-postgres
        image: postgres:13
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-data
        emptyDir: {}
