img/kubernetis_main/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-crud-api-service
spec:
  type: NodePort
  selector:
    app: my-crud-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30774
